2014-01-25  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/59561
	* cfgloopmanip.c (copy_loop_info): If
	loop->warned_aggressive_loop_optimizations, make sure
	the flag is set in target loop too.

2014-01-24  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* builtins.c (is_builtin_name): Renamed flag_enable_cilkplus to
	flag_cilkplus.
	* builtins.def: Likewise.
	* cilk.h (fn_contains_cilk_spawn_p): Likewise.
	* cppbuiltin.c (define_builtin_macros_for_compilation_flags): Likewise.
	* ira.c (ira_setup_eliminable_regset): Likewise.
	* omp-low.c (gate_expand_omp): Likewise.
	(execute_lower_omp): Likewise.
	(diagnose_sb_0): Likewise.
	(gate_diagnose_omp_blocks): Likewise.
	(simd_clone_clauses_extract): Likewise.
	(gate): Likewise.

2014-01-24  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_expand_vec_perm_const_1): Remove
	correction for little endian...
	* config/rs6000/vsx.md (vsx_xxpermdi2_<mode>_1): ...and move it to
	here.

2014-01-24  Jeff Law  <law@redhat.com>

	PR tree-optimization/59919
	* tree-vrp.c (find_assert_locations_1): Do not register asserts
	for non-returning calls.

2014-01-24  James Greenhalgh  <james.greenhalgh@arm.com>

	* common/config/aarch64/aarch64-common.c
	(aarch64_rewrite_mcpu): Handle multiple names.
	* config/aarch64/aarch64.h
	(BIG_LITTLE_SPEC): Do not discard mcpu switches.

2014-01-24  Dodji Seketeli  <dodji@redhat.com>

	* input.c (add_file_to_cache_tab): Handle the case where fopen
	returns NULL.

2014-01-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59929
	* config/i386/i386.md (pushsf splitter): Get stack adjustment
	from push operand if code of push isn't PRE_DEC.

2014-01-23  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/59909
	* doc/invoke.texi (RS/6000 and PowerPC Options): Document
	-mquad-memory-atomic.  Update -mquad-memory documentation to say
	it is only used for non-atomic loads/stores.

	* config/rs6000/predicates.md (quad_int_reg_operand): Allow either